--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Hydra Template
-url: "https://proud-alligator.cloudvent.net"
+title: Jonny - 你既24小時宣傳助手
+url: "https://jonny.proactivesystem.com.hk"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,15 +10,15 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product marketing template for Jekyll.
+description: Jonny - 你既24小時宣傳助手
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Hydra Template
+  name: Jonny - 你既24小時宣傳助手
   links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+    - https://facebook.com/baristajonny
 
 # -----
 # Build
