--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,12 +1,12 @@
-- links:
-  - name: Pricing
-    link: /pricing/
-  - name: About
-    link: /about/
-  - name: Contact
-    link: /contact/
-- links:
-  - name: Facebook
-    link: https://facebook.com
-    new_window: true
-    social_icon: Facebook
+# - links:
+#   - name: Pricing
+#     link: /pricing/
+#   - name: About
+#     link: /about/
+#   - name: Contact
+#     link: /contact/
+# - links:
+#   - name: Facebook
+#     link: https://facebook.com
+#     new_window: true
+#     social_icon: Facebook
