update images and footer

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -10,3 +10,6 @@
 #     link: https://facebook.com
 #     new_window: true
 #     social_icon: Facebook
+address: Unit B, 11/F, Easy Tower, 609 Tai Nan West St, Hong Kong
+email: jonny@proactivesystem.com.hk
+tel: +852 31118703
