--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Jonny - 你既24小時宣傳助手
 url: "https://jonny.proactivesystem.com.hk"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-102342164-4
 google_maps_javascript_api_key:
 disqus_shortname:
 
